<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@android:drawable/ic_media_rew" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:text="创建活动" />

    </LinearLayout>
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:padding="10dp"
         android:orientation="vertical">

        <!--    活动展示大图    -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:background="@drawable/shape_create_portrait_bg">

             <ImageView
                 android:id="@+id/activityImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@color/gary">

             </ImageView>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="20dp">


                 <TextView
                     android:id="@+id/logotext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="宣传封面图"
                     android:textColor="#424B51"
                     android:textSize="22dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:text="像素要求：100px*200px"
                     ></TextView>


             </LinearLayout>

<!--       展示创建详情      -->
         </LinearLayout>


         <!--横线-->


         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="10dp">
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="社团名称"
                 android:textSize="22dp"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/title_text_color"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>

             <TextView
                 android:id="@+id/clubName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:background="@null"
                 android:textColor="#485560"
                 android:text="我的公益社团"
                 android:textSize="@dimen/commontext" />

         </RelativeLayout>
         <View  android:layout_height="1dp"
             android:layout_width="match_parent"
             android:background="#c8c8c8"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/activityNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="活动名称"
                android:textSize="@dimen/commontext"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/activityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:hint="请输入活动名称"
                android:inputType="textNoSuggestions"
                android:layout_centerVertical="true"
                android:textColor="#000000"
                android:layout_alignParentRight="true"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/commontext" />

        </RelativeLayout>
         <View  android:layout_height="1dp"
             android:layout_width="match_parent"
             android:background="#c8c8c8"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="10dp">
             <TextView
                 android:id="@+id/activity_leader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="活动负责人"
                 android:textSize="@dimen/commontext"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_gravity="center"/>
             <EditText
                 android:id="@+id/leaderName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:hint="@string/create_hintName"
                 android:inputType="textNoSuggestions"
                 android:layout_centerVertical="true"
                 android:textColor="#000000"
                 android:layout_alignParentRight="true"
                 android:textColorHint="@color/hint_text"
                 android:layout_marginRight="15dp"
                 android:textSize="@dimen/commontext" />

         </RelativeLayout>
         <View  android:layout_height="1dp"
             android:layout_width="match_parent"
             android:background="#c8c8c8"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="10dp">

             <TextView
                 android:id="@+id/leaderCallTxt"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:text="负责人联系方式"
                 android:textSize="@dimen/commontext" />
             <EditText
                 android:id="@+id/leaderCall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:background="@null"
                 android:hint="@string/create_hintNumber"
                 android:inputType="textNoSuggestions"
                 android:layout_centerVertical="true"
                 android:textColor="#000000"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
                 android:textColorHint="@color/hint_text"
                 android:textSize="@dimen/commontext" />

         </RelativeLayout>
         <View  android:layout_height="1dp"
             android:layout_width="match_parent"
             android:background="#c8c8c8"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/activity_intro_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="活动介绍"
                 android:textSize="@dimen/commontext"
                 android:layout_marginLeft="15dp"
                 android:padding="5dp"
                 android:layout_alignParentLeft="true" />

             <EditText
                 android:id="@+id/activity_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/border"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="@string/create_hint4"
                 android:inputType="textMultiLine"
                 android:padding="10dp" />
         </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="15dp">
             <Button
                 android:id="@+id/createActivity"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="190dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/shape_register_login_btn"
                 android:text="点击创建"

                 android:layout_centerHorizontal="true"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </RelativeLayout>
 </LinearLayout>
</LinearLayout>